--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -5,4 +5,9 @@ jobs:
     runs-on: macos-13
     steps:
       - uses: actions/checkout@v4
-      - run: swift package generate-documentation
+      - run: swift package --allow-writing-to-directory ./docs \
+    generate-documentation --target SwiftlyHttp \
+    --disable-indexing \
+    --transform-for-static-hosting \
+    --hosting-base-path https://roya1v.github.io \
+    --output-path ./docs
