--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -10,7 +10,7 @@ jobs:
             generate-documentation --target SwiftlyHttp \
             --disable-indexing \
             --transform-for-static-hosting \
-            --hosting-base-path https://roya1v.github.io \
+            --hosting-base-path https://roya1v.github.io/SwiftlyHttp \
             --output-path ./docs
       - uses: JamesIves/github-pages-deploy-action@v4
         with:
